_generated-doc/2.7/config/quarkus-kubernetes-config-group-env-var-from-key-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-env-var-from-key-config_configuration]]link:#quarkus-kubernetes-config-group-env-var-from-key-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.from-secret]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.from-secret[quarkus.knative.env.mapping."mapping".from-secret]`

[.description]
--
The optional name of the Secret from which a value is to be extracted. Mutually exclusive with `from-configmap`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.from-configmap]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.from-configmap[quarkus.knative.env.mapping."mapping".from-configmap]`

[.description]
--
The optional name of the ConfigMap from which a value is to be extracted. Mutually exclusive with `from-secret`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.with-key]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.with-key[quarkus.knative.env.mapping."mapping".with-key]`

[.description]
--
The key identifying the field from which the value is extracted.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.from-secret]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.from-secret[quarkus.kubernetes.env.mapping."mapping".from-secret]`

[.description]
--
The optional name of the Secret from which a value is to be extracted. Mutually exclusive with `from-configmap`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.from-configmap]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.from-configmap[quarkus.kubernetes.env.mapping."mapping".from-configmap]`

[.description]
--
The optional name of the ConfigMap from which a value is to be extracted. Mutually exclusive with `from-secret`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.with-key]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.with-key[quarkus.kubernetes.env.mapping."mapping".with-key]`

[.description]
--
The key identifying the field from which the value is extracted.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.from-secret]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.from-secret[quarkus.openshift.env.mapping."mapping".from-secret]`

[.description]
--
The optional name of the Secret from which a value is to be extracted. Mutually exclusive with `from-configmap`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.from-configmap]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.from-configmap[quarkus.openshift.env.mapping."mapping".from-configmap]`

[.description]
--
The optional name of the ConfigMap from which a value is to be extracted. Mutually exclusive with `from-secret`.
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.with-key]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.with-key[quarkus.openshift.env.mapping."mapping".with-key]`

[.description]
--
The key identifying the field from which the value is extracted.
--|string 
|required icon:exclamation-circle[title=Configuration property is required]

|===