_generated-doc/3.0/config/quarkus-kubernetes-config-group-env-var-from-key-config.adoc

:summaryTableId: quarkus-kubernetes-config-group-env-var-from-key-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-kubernetes-config-group-env-var-from-key-config_configuration]]link:#quarkus-kubernetes-config-group-env-var-from-key-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.from-secret]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.from-secret[quarkus.knative.env.mapping."mapping".from-secret]`

[.description]
--
The optional name of the Secret from which a value is to be extracted. Mutually exclusive with `from-configmap`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_ENV_MAPPING__MAPPING__FROM_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_ENV_MAPPING__MAPPING__FROM_SECRET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.from-configmap]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.from-configmap[quarkus.knative.env.mapping."mapping".from-configmap]`

[.description]
--
The optional name of the ConfigMap from which a value is to be extracted. Mutually exclusive with `from-secret`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_ENV_MAPPING__MAPPING__FROM_CONFIGMAP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_ENV_MAPPING__MAPPING__FROM_CONFIGMAP+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.with-key]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.knative.env.mapping.-mapping-.with-key[quarkus.knative.env.mapping."mapping".with-key]`

[.description]
--
The key identifying the field from which the value is extracted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KNATIVE_ENV_MAPPING__MAPPING__WITH_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KNATIVE_ENV_MAPPING__MAPPING__WITH_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.from-secret]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.from-secret[quarkus.kubernetes.env.mapping."mapping".from-secret]`

[.description]
--
The optional name of the Secret from which a value is to be extracted. Mutually exclusive with `from-configmap`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_ENV_MAPPING__MAPPING__FROM_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_ENV_MAPPING__MAPPING__FROM_SECRET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.from-configmap]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.from-configmap[quarkus.kubernetes.env.mapping."mapping".from-configmap]`

[.description]
--
The optional name of the ConfigMap from which a value is to be extracted. Mutually exclusive with `from-secret`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_ENV_MAPPING__MAPPING__FROM_CONFIGMAP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_ENV_MAPPING__MAPPING__FROM_CONFIGMAP+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.with-key]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.kubernetes.env.mapping.-mapping-.with-key[quarkus.kubernetes.env.mapping."mapping".with-key]`

[.description]
--
The key identifying the field from which the value is extracted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KUBERNETES_ENV_MAPPING__MAPPING__WITH_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KUBERNETES_ENV_MAPPING__MAPPING__WITH_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.from-secret]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.from-secret[quarkus.openshift.env.mapping."mapping".from-secret]`

[.description]
--
The optional name of the Secret from which a value is to be extracted. Mutually exclusive with `from-configmap`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_ENV_MAPPING__MAPPING__FROM_SECRET+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_ENV_MAPPING__MAPPING__FROM_SECRET+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.from-configmap]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.from-configmap[quarkus.openshift.env.mapping."mapping".from-configmap]`

[.description]
--
The optional name of the ConfigMap from which a value is to be extracted. Mutually exclusive with `from-secret`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_ENV_MAPPING__MAPPING__FROM_CONFIGMAP+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_ENV_MAPPING__MAPPING__FROM_CONFIGMAP+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a|icon:lock[title=Fixed at build time] [[quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.with-key]]`link:#quarkus-kubernetes-config-group-env-var-from-key-config_quarkus.openshift.env.mapping.-mapping-.with-key[quarkus.openshift.env.mapping."mapping".with-key]`

[.description]
--
The key identifying the field from which the value is extracted.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OPENSHIFT_ENV_MAPPING__MAPPING__WITH_KEY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OPENSHIFT_ENV_MAPPING__MAPPING__WITH_KEY+++`
endif::add-copy-button-to-env-var[]
--|string 
|required icon:exclamation-circle[title=Configuration property is required]

|===